[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Enemies/Slime/New_slime_finished.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/EffectsAnimation.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Enemies/Spider/Spider.gd" type="Script" id=6]
[ext_resource path="res://Entities/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Enemies/EffectFSM.gd" type="Script" id=8]
[ext_resource path="res://Entities/Enemies/EnemyHurtbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Enemies/Spider/SpiderFSM.gd" type="Script" id=10]
[ext_resource path="res://Entities/Enemies/Stats.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 12 )

[sub_resource type="CircleShape2D" id=2]
radius = 52.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.25, 11.1237 )

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[node name="Spider" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -22, -33 )
texture = ExtResource( 1 )
centered = false
hframes = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )
stats_path = NodePath("../Stats")
timer_path = NodePath("../Timer")

[node name="Stats" parent="." instance=ExtResource( 11 )]
max_health = 200

[node name="EffectFSM" type="Node" parent="."]
script = ExtResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 16, 0 )
shape = SubResource( 3 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 9 )]
visible = false
effected_by = [ true, true, true, true, false ]
effect_fsm_path = NodePath("../EffectFSM")

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 4 )

[node name="EffectsAnimation" parent="." instance=ExtResource( 2 )]

[node name="Floorchecker" type="RayCast2D" parent="."]
position = Vector2( 19, 12 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 64

[node name="Wallchecker" type="RayCast2D" parent="."]
position = Vector2( 18, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 64

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="immobilized" from="Stats" to="StateMachine" method="_on_Stats_immobilized"]
[connection signal="no_health" from="Stats" to="StateMachine" method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="EnemyHurtbox"]
